--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="icon" href="img/favicon-32x32.png">
 </head>
 <body>
-<div class="page">
+<main class="page">
     <div class="qr">
         <img class="qr__photo" src="img/image-qr-code.png" alt="qrcode">
         <h1 class="qr__title">Improve your front-end skills by building projects</h1>
         <p class="qr__description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next
             level</p>
     </div>
-</div>
+</main>
 </body>
 </html>
